<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/layout"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:text="BLOGS"
                android:background="@color/black"
                android:textColor="#B10C0C"
                android:gravity="center"
                android:textSize="36sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="239dp"
                android:layout_height="190dp"
                android:layout_marginTop="20dp"
                android:background="#c1c1c1"
                android:src="@drawable/image_3" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:gravity="center"
                android:text="@string/textView6"
                android:background="@color/black"
                android:textSize="24sp"/>

            <ImageView
                android:layout_width="239dp"
                android:layout_height="165dp"
                android:background="#c1c1c1"
                android:src="@drawable/screenshot_2021_03_27_125928" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/textView7"
                android:gravity="center"
                android:background="@color/black"
                android:textSize="24sp"/>

            <ImageView
                android:layout_width="239dp"
                android:layout_height="170dp"
                android:background="#c1c1c1"
                android:src="@drawable/screenshot_2021_03_27_125952" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/textView8"
                android:gravity="center"
                android:background="@color/black"
                android:textSize="24sp"/>

            <ImageView
                android:layout_width="239dp"
                android:layout_height="169dp"
                android:background="#c1c1c1"
                android:src="@drawable/screenshot_2021_03_27_130009" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/textView9"
                android:gravity="center"
                android:background="@color/black"
                android:textSize="24sp"/>

            <ImageView
                android:layout_width="239dp"
                android:layout_height="132dp"
                android:background="#c1c1c1"
                android:src="@drawable/screenshot_20190828_015617__01" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/textView10"
                android:gravity="center"
                android:background="@color/black"
                android:textSize="24sp"/>

            <ImageView
                android:layout_width="239dp"
                android:layout_height="163dp"
                android:background="#c1c1c1"
                android:src="@drawable/screenshot_20190813_130231__01" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/textView11"
                android:gravity="center"
                android:background="@color/black"
                android:textSize="24sp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>